update benchmark